--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,2 +1,6 @@
-exec "./autoexec-part1.cfg"; exec "./autoexec-part2.cfg";
-// Single line seems to force one file to be executed *after* the other instead of whichever one gaben decides should be run first for.. some reason
+echoln "[autoexec.cfg] Start of autoexec.cfg";
+
+echoln "[autoexec.cfg] Executing config: './cfg/loader.cfg'!";
+exec "./cfg/loader.cfg";
+
+echoln "[autoexec.cfg] End of autoexec.cfg";
