--- a/practice.cfg
+++ b/practice.cfg
@@ -1,8 +1,8 @@
 echo;
 echoln "Loading...";
-echoln "Fin's CS2 Practice Config 1.0.0";
+echoln "Fin's CS2 Practice Config 1.0.1";
 echoln "steamcommunity.com/id/bigfinfrank";
-echoln "Last edited: October 7th 2023";
+echoln "Last edited: October 13th 2023";
 echo;
 
 
@@ -49,7 +49,6 @@ echoln "[2.1] Changing game mode to competitive";
 game_alias "competitive";                               // Set the configuration of game type and mode based on game alias like "deathmatch".
 game_type "0";                                          // The current game type. See GameModes.txt.
 game_mode "1";                                          // The current game mode (based on game type). See GameModes.txt.
-sv_game_mode_flags "0";                                 // Dedicated server game mode flags to run
 
 
 echoln "[2.2] Changing settings to use Valve's official competitive settings as a base";
@@ -90,17 +89,18 @@ rate "1000000";                                         // Min bytes/sec the hos
 
 
 echoln "[2.5] Changing framerate and battery saving settings";
+mobile_fps_limit "0";                                   // MOBILE_FPS_CONTROL: Mobile FPS limit - 15, 30, 60
+mobile_fps_increase_during_touch "true";                // MOBILE_FPS_CONTROL: If true we increase framerate limit during touch
+mobile_fps_increase_during_charging "true";             // MOBILE_FPS_CONTROL: If true we increase framerate limit while charging
 sv_hibernate_postgame_delay "inf";                      // # of seconds to wait after final client leaves before hibernating.
 sv_hibernate_when_empty "false";                        // Puts the server into extremely low CPU usage mode when no clients connected
 sv_phys_sleep_enable "false";                           // Enable sleeping for dynamic physics bodies.
-engine_no_focus_sleep "0";                              // This isn't officially networking but the server tickrate seems to never be higher than the host framerate which is affected by this when tabbed out.
 fps_max "0";                                            // Frame rate limiter.  0=no limit.  Does not apply to dedicated server.
 fps_max_ui "0";                                         // Frame rate limiter while the game UI is displayed.  0=no limit.  Does not apply to dedicated server.
 fps_max_tools "0";                                      // Additional frame rate limit while in tools mode and a window other than the game window has focus. Note that fps_max still applies, this only allows the maximum frame rate for tools mode to be lower. 0=no tools specific limit.
 battery_saver "false";                                  // OBSOLETE replaced by mobile_fps_* - Battery saver mode. 0=off, 1=on
-mobile_fps_limit "0";                                   // MOBILE_FPS_CONTROL: Mobile FPS limit - 15, 30, 60
-mobile_fps_increase_during_touch "true";                // MOBILE_FPS_CONTROL: If true we increase framerate limit during touch
-mobile_fps_increase_during_charging "true";             // MOBILE_FPS_CONTROL: If true we increase framerate limit while charging
+engine_no_focus_sleep "0";                              // This isn't officially networking but the server tickrate seems to never be higher than the host framerate which is affected by this when tabbed out.
+engine_low_latency_sleep_after_client_tick "true";      // When r_low_latency is enabled, this moves the low latency sleep on tick frames to happen after client simulation.
 
 
 
@@ -121,6 +121,7 @@ mp_suicide_penalty "false";                             // Punish players for su
 mp_autoteambalance "false";
 mp_spawnprotectiontime "0";                             // Kick players who team-kill within this many seconds of a round restart.
 mp_footsteps_serverside "true";                         // Makes the server always play footstep sounds. Clients never calculate footstep sounds locally, instead relying on the server.
+hostname_in_client_status "false";                      // Show server hostname in client status.
 //CS2 sv_max_allowed_developer "0";
 //CS2 sv_allow_wait_command "0";
 //CS2 sv_reliableavatardata "2";
@@ -165,9 +166,12 @@ sv_vote_issue_loadbackup_spec_only "true";              // When enabled, only ad
 sv_vote_issue_loadbackup_allowed "false";               // Can people hold votes to load match from backup?
 sv_workshop_allow_other_maps "false";                   // When hosting a workshop collection, users can play other workshop map on this server when it is empty and then mapcycle into this server collection.
 sv_vote_issue_kick_allowed "false";                     // Can people hold votes to kick players from the server?
+sv_vote_allow_spectators "true";                        // Allow spectators to initiate votes?
+sv_vote_allow_in_warmup "true";                         // Allow voting during warmup?
 sv_vote_command_delay "0";                              // How long after a vote passes until the action happens
 mp_endmatch_votenextmap "false";                        // Whether or not players vote for the next map at the end of the match when the final scoreboard comes up
 mp_endmatch_votenextleveltime "0";                      // If mp_endmatch_votenextmap is set, players have this much time to vote on the next map at match end.
+mapgroup "mg_custom";                                   // Specify a map group
 
 
 
@@ -332,6 +336,14 @@ mp_respawn_on_death_ct "true";                          // When set to 1, counte
 mp_respawn_on_death_t "true";                           // When set to 1, terrorists will respawn after dying.
 mp_respawnwavetime_ct "0";                              // Time between respawn waves for CTs.
 mp_respawnwavetime_t "0";                               // Time between respawn waves for Terrorists.
+healthshot_health "1000000000";
+healthshot_healthboost_time "0";
+healthshot_allow_use_at_full "false";
+healthshot_healthboost_speed_multiplier "1";
+healthshot_healthboost_damage_multiplier "1";
+mp_dm_healthshot_killcount "1";                         // Grant healthshots in deathmatch after n kills
+sv_health_approach_enabled "false";                     //
+sv_health_approach_speed "inf";
 
 
 echoln "[7.6] Adjusting movement settings";
@@ -342,22 +354,24 @@ mp_solid_teammates "2";                                 // How solid are teammat
 echoln " ";
 demo_info;                                              // Print version info string.
 echoln " ";
+net_status;                                             // Shows current network status
+echoln " ";
 status;                                                 // Print connection status
 echoln " ";
 trusted_launch;                                         // Trusted launch status
 echoln " ";
-sys_info;
+sys_info;                                               // Print system information to the console
 echoln " ";
 
 
 echo;
 echoln "Loaded!";
-echoln "Fin's CS2 Practice Config 1.0.0";
+echoln "Fin's CS2 Practice Config 1.0.1";
 echoln "steamcommunity.com/id/bigfinfrank";
-echoln "Last edited: October 7th 2023";
+echoln "Last edited: October 13th 2023";
 echo;
 
 
 echoln "Restarting to apply changes and disabling cheats in one second...";
 mp_restartgame "1";                                     // If non-zero, game will restart in the specified number of seconds
-//CS2 mp_forcerespawnplayers;
+respawn_player;                                         // Respawns the player from death!
